# Cortex_Mentor

./: .coveragerc  .gitignore  README.md  graph_log.md  new_file.txt  pyproject.toml  pytest.ini
.github/workflows/: backend-tests.yml  extension-tests.yml  integration-tests.yml  pr-review.yml
agents/: surgical-code-reviewer-full-prompt.md
docs/: Agent-Orchestration-Diagrams.md  Architecture-Agent-Model.md  Architecture-Pipeline-Model.md  Backend-Patterns.md  Codebase-Quality-Metrics.md  Developer-Quickstart.md  Gh-Tool-Documentation.md  Pipeline-Execution-Workflow.md  Product-Overview.md  System-Architecture-Diagram.md  Testing-Guide.md  architecture.md  vision_realisation.md
gemini_tools/: create_issue_branch_pr.md
observers/git_hooks/: post-commit.py  setup_hooks.sh
scripts/: populate_cortex_files.sh
src/cortex/: exceptions.py  main.py  workers.py
src/cortex/agents/: level1_comprehension.py  level2_synthesis.py
src/cortex/agents/level3_curation/: corpus_curator.py
src/cortex/api/: events.py
src/cortex/core/: config.py  redis.py  ws_connection_manager.py
src/cortex/models/: events.py  insights.py
src/cortex/pipelines/: comprehension.py  curation.py  delivery.py  graph_traversal.py  pipelines.py  processors.py  synthesis.py
src/cortex/prompts/: chief_editor.jinja2  code_change_summary.jinja2  commit_summary.jinja2  insight_synthesis.jinja2  knowledge_gateway.jinja2
src/cortex/services/: chroma_service.py  knowledge_graph_service.py  llmservice.py  prompt_manager.py  upstash_service.py  vector_db_service.py
src/cortex/utility/: agent_runner.py  utils.py
src/data/knowledge_graph/vector_db/: chroma.sqlite3
tests/: test_api.py  test_comprehension.py  test_curation.py  test_delivery.py  test_e2e_real.py  test_error_handling.py  test_graph_traversal.py  test_integration.py  test_pipelines.py  test_services.py  test_workers.py
tools/: git-issue-to-branch.md  git_backmerge.md  git_deleted_branch_cleanup.md
