[tool.poetry]
name = "cortex"
version = "0.1.0"
description = "Cortex Mentor Application"
authors = ["Itish Srivastava <itish.github.io@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.119.0"
uvicorn = {version = "0.37.0", extras = ["standard"]}
pydantic = "2.12.0"
chromadb = "0.5.4"
ollama = "0.6.0"
watchdog = "6.0.0"
GitPython = "3.1.43"
arq = "^0.26.0"
redis = "^5.0.4"
upstash-vector = "^0.8.0"
PyYAML = "6.0.3"
google-adk = "1.16.0"
google-genai = "^1.50.1"
Jinja2 = "^3.1.6"
google-cloud-texttospeech = "^2.33.0"
numpy = "<2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
